--- a/404.html
+++ b/404.html
@@ -1,24 +1,53 @@
 <!DOCTYPE html>
-
 <html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>404</title>
-    <LINK href="styles.css" rel="stylesheet" type="text/css">
-  </head>
-
-  <body>
-
-    <h1> NOT FOUND </h1>
-    <img src="forkit.gif" id="octocat" alt="" />
-
-    <!-- Feel free to change this text here -->
-    <p>
-      NICE!!
-    </p>
-    <p>
-      NICE!!
-    </p>
-
-  </body>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Fimafeng</title>
+<style>
+body, html {
+  height: 100%;
+  margin: 0;
+  font: 400 15px/1.8 "Lato", sans-serif;
+  color: #777;
+}
+.bgimg {
+  position: relative;
+  opacity: 1;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.bgimg {
+  background-image: url("https://miro.medium.com/max/700/1*hFwwQAW45673VGKrMPE2qQ.png");
+  height: 100%;
+}
+.caption {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 100%;
+  text-align: center;
+  color: #000;
+}
+.caption span.border {
+  background-color: #111;
+  color: #fff;
+  padding: 18px;
+  font-size: 25px;
+  letter-spacing: 10px;
+}
+h3 {
+  letter-spacing: 5px;
+  text-transform: uppercase;
+  font: 20px "Lato", sans-serif;
+  color: #111;
+}
+</style>
+</head>
+<body>
+<div class="bgimg">
+  <div class="caption">
+  </div>
+</div>
+</body>
 </html>
